--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,12 +1,13 @@
 .section {
   display: flex;
   flex-direction: column;
-
   align-items: flex-start;
+  max-width: 450px;
 }
 
 .title {
   margin-top: 0;
-  font-size: 42px;
+  margin-bottom: 8px;
+  font-size: 32px;
   text-transform: uppercase;
 }
