--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 450px;
   padding: 5px 10px;
   border: 1px solid #2b92ff;
   border-radius: 5px;
